Fix thumbnail url and sizing; fix text color in dark mode

--- a/projects/ccf-eui/src/app/app.component.theme.scss
+++ b/projects/ccf-eui/src/app/app.component.theme.scss
@@ -6,6 +6,10 @@
   $background: map-get($theme, background);
   $accent: map-get($theme, accent);
 
+  .ccf-app {
+    color: map-get($foreground, text);
+  }
+
   .button, .close-button {
     &:hover {
       background-color: map-get($background, info-button-hover) !important;
